style(ui): improve the code style